[p2p] Update P2P discovery PR (#921)

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,11 +14,16 @@ documentation = "https://docs.rs/commonware-utils"
 commonware-codec = { workspace = true }
 bytes = { workspace = true }
 futures = { workspace = true }
+rand = { workspace = true }
 thiserror = { workspace = true }
+
+# Enable "js" feature when WASM is target
+[target.'cfg(target_arch = "wasm32")'.dependencies.getrandom]
+version = "0.2.15"
+features = ["js"]
 
 [dev-dependencies]
 num-bigint = "0.4.6"
-rand = { workspace = true }
 
 [lib]
 bench = false
