[p2p/simulated] Provide Max-Min Fair Bandwidth Allocation via Progressive Filling (#1655)

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,9 +13,14 @@ documentation = "https://docs.rs/commonware-utils"
 [dependencies]
 commonware-codec = { workspace = true, default-features = false }
 bytes = { workspace = true }
-futures = { workspace = true, optional = true  }
+futures = { workspace = true, optional = true }
 rand = { workspace = true }
 thiserror = { workspace = true }
+cfg-if = { workspace = true }
+num-bigint = { workspace = true, optional = true }
+num-rational = { workspace = true, optional = true }
+num-integer = { workspace = true, optional = true }
+num-traits = { workspace = true, optional = true }
 
 # Enable "js" feature when WASM is target
 [target.'cfg(target_arch = "wasm32")'.dependencies.getrandom]
@@ -27,7 +32,18 @@ num-bigint = { version = "0.4.6", default-features = false }
 
 [features]
 default = ["std"]
-std = ["rand/std", "rand/std_rng", "thiserror/std", "bytes/std", "commonware-codec/std", "futures"]
+std = [
+    "rand/std",
+    "rand/std_rng",
+    "thiserror/std",
+    "bytes/std",
+    "commonware-codec/std",
+    "futures",
+    "num-bigint",
+    "num-rational",
+    "num-integer",
+    "num-traits",
+]
 
 [lib]
 bench = false
