Add fuzz test for new utils (#1974)
Co-authored-by: Dan Laine <dan@commonware.xyz>
Co-authored-by: Patrick O'Grady <me@patrickogrady.xyz>

--- a/fuzz/Cargo.toml
+++ b/fuzz/Cargo.toml
@@ -72,3 +72,10 @@ path = "fuzz_targets/historical_bitmap.rs"
 test = false
 doc = false
 bench = false
+
+[[bin]]
+name = "prunable"
+path = "fuzz_targets/prunable.rs"
+test = false
+doc = false
+bench = false
