--- a/fuzz/Cargo.toml
+++ b/fuzz/Cargo.toml
@@ -10,12 +10,12 @@ cargo-fuzz = true
 
 [dependencies]
 arbitrary = { workspace = true, features = ["derive"] }
-libfuzzer-sys = { workspace = true }
+bytes.workspace = true
+commonware-codec.workspace = true
 commonware-utils = { path = ".." }
-commonware-codec = { workspace = true }
-bytes = { workspace = true }
+futures.workspace = true
+libfuzzer-sys.workspace = true
 rand = { workspace = true, features = ["std_rng"] }
-futures = { workspace = true }
 
 [[bin]]
 name = "lib_functions"
