--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,6 +19,7 @@ num-bigint = { workspace = true, optional = true }
 num-integer = { workspace = true, optional = true }
 num-rational = { workspace = true, optional = true }
 num-traits = { workspace = true, optional = true }
+pin-project.workspace = true
 rand.workspace = true
 thiserror.workspace = true
 
