--- a/Cargo.toml
+++ b/Cargo.toml
@@ -30,7 +30,7 @@ features = ["js"]
 
 [dev-dependencies]
 criterion.workspace = true
-num-bigint = { version = "0.4.6", default-features = false }
+num-bigint = { workspace = true, default-features = false }
 rstest.workspace = true
 
 [features]
