--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,6 +18,7 @@ bytes.workspace = true
 cfg-if.workspace = true
 commonware-codec = { workspace = true, default-features = false }
 futures = { workspace = true, optional = true }
+hashbrown.workspace = true
 num-bigint = { workspace = true, optional = true }
 num-integer = { workspace = true, optional = true }
 num-rational = { workspace = true, optional = true }
